--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1813,7 +1813,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
-.translate-x-0, .translate-x-5, .translate-y-8, .translate-y-0, .-translate-y-1, .-translate-y-2, .translate-y-2, .-translate-x-full, .-rotate-180, .-skew-x-12, .transform, .rtl\:rotate-180, .lg\:translate-x-0{
+.translate-x-0, .translate-x-5, .translate-y-8, .translate-y-0, .-translate-y-1, .-translate-y-2, .translate-y-2, .-translate-x-full, .-rotate-180, .-skew-x-12, .transform, .rtl\:-translate-x-5, .rtl\:translate-x-full, .rtl\:rotate-180, .lg\:translate-x-0, .rtl\:lg\:-translate-x-0{
   --tw-translate-x: 0;
   --tw-translate-y: 0;
   --tw-rotate: 0;
@@ -1824,7 +1824,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.divide-y > *, .divide-x > *, .border, .border-0, .border-2, .border-t, .border-b, .border-l, .border-r, .md\:border-t-0, .md\:border-l, .lg\:border-r{
+.divide-x > *, .divide-y > *, .border, .border-0, .border-2, .border-t, .border-b, .border-l, .border-r, .md\:border-t-0, .md\:border-l, .lg\:border-r{
   --tw-border-opacity: 1;
   border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
@@ -1836,7 +1836,7 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 0 #0000;
 }
 
-.ring-1, .ring-0, .ring-2, .focus-within\:ring-1, .focus-within\:ring-inset, .focus\:ring-1, .focus\:ring-2, .focus\:ring-0, .focus\:ring, .focus\:ring-inset, .group-focus-within\:ring-1, .group-focus-within\:ring-2, .group-focus-within\:ring-inset, .group-focus\:ring-1{
+.ring-1, .ring-0, .ring-2, .focus-within\:ring-1, .focus-within\:ring-inset, .focus\:ring-1, .focus\:ring-2, .focus\:ring-0, .focus\:ring, .focus\:ring-inset, .group-focus-within\:ring-2, .group-focus-within\:ring-inset{
   --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
@@ -2440,17 +2440,14 @@ select{
 .z-10{
   z-index: 10;
 }
+.z-0{
+  z-index: 0;
+}
 .z-20{
   z-index: 20;
 }
 .z-40{
   z-index: 40;
-}
-.z-50{
-  z-index: 50;
-}
-.z-0{
-  z-index: 0;
 }
 .col-span-1{
   grid-column: span 1 / span 1;
@@ -2544,9 +2541,6 @@ select{
 .-ml-2{
   margin-left: -0.5rem;
 }
-.-mr-2{
-  margin-right: -0.5rem;
-}
 .-ml-3{
   margin-left: -0.75rem;
 }
@@ -2555,6 +2549,9 @@ select{
 }
 .-ml-1{
   margin-left: -0.25rem;
+}
+.-mr-2{
+  margin-right: -0.5rem;
 }
 .-mr-3{
   margin-right: -0.75rem;
@@ -2568,14 +2565,17 @@ select{
 .mb-6{
   margin-bottom: 1.5rem;
 }
-.mt-9{
-  margin-top: 2.25rem;
+.-mb-7{
+  margin-bottom: -1.75rem;
 }
-.ml-3{
-  margin-left: 0.75rem;
+.mr-3{
+  margin-right: 0.75rem;
 }
 .mt-auto{
   margin-top: auto;
+}
+.mt-10{
+  margin-top: 2.5rem;
 }
 .ml-auto{
   margin-left: auto;
@@ -2583,20 +2583,11 @@ select{
 .-mr-6{
   margin-right: -1.5rem;
 }
-.mr-3{
-  margin-right: 0.75rem;
-}
-.mb-2{
-  margin-bottom: 0.5rem;
-}
 .block{
   display: block;
 }
 .inline-block{
   display: inline-block;
-}
-.inline{
-  display: inline;
 }
 .flex{
   display: flex;
@@ -2646,11 +2637,11 @@ select{
 .h-12{
   height: 3rem;
 }
-.h-full{
-  height: 100%;
-}
 .h-4{
   height: 1rem;
+}
+.h-full{
+  height: 100%;
 }
 .h-3{
   height: 0.75rem;
@@ -2703,8 +2694,8 @@ select{
 .w-16{
   width: 4rem;
 }
-.w-52{
-  width: 13rem;
+.w-4{
+  width: 1rem;
 }
 .w-64{
   width: 16rem;
@@ -2718,9 +2709,6 @@ select{
 .w-12{
   width: 3rem;
 }
-.w-4{
-  width: 1rem;
-}
 .w-3{
   width: 0.75rem;
 }
@@ -2730,8 +2718,8 @@ select{
 .w-9{
   width: 2.25rem;
 }
-.w-60{
-  width: 15rem;
+.w-52{
+  width: 13rem;
 }
 .w-80{
   width: 20rem;
@@ -2849,14 +2837,14 @@ select{
   -webkit-animation: spin 1s linear infinite;
           animation: spin 1s linear infinite;
 }
+.cursor-not-allowed{
+  cursor: not-allowed;
+}
 .cursor-default{
   cursor: default;
 }
 .cursor-pointer{
   cursor: pointer;
-}
-.cursor-not-allowed{
-  cursor: not-allowed;
 }
 .select-none{
   -webkit-user-select: none;
@@ -2992,30 +2980,30 @@ select{
   margin-right: calc(1rem * var(--tw-space-x-reverse));
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+.space-x-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .space-y-3 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
-.space-x-3 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.divide-y > :not([hidden]) ~ :not([hidden]){
-  --tw-divide-y-reverse: 0;
-  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 .divide-x > :not([hidden]) ~ :not([hidden]){
   --tw-divide-x-reverse: 0;
   border-right-width: calc(1px * var(--tw-divide-x-reverse));
   border-left-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
+}
+.divide-y > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
 }
 .divide-gray-300 > :not([hidden]) ~ :not([hidden]){
   --tw-divide-opacity: 1;
@@ -3047,6 +3035,9 @@ select{
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.whitespace-normal{
+  white-space: normal;
+}
 .whitespace-nowrap{
   white-space: nowrap;
 }
@@ -3074,25 +3065,23 @@ select{
 .rounded-md{
   border-radius: 0.375rem;
 }
-.rounded-t-xl{
-  border-top-left-radius: 0.75rem;
-  border-top-right-radius: 0.75rem;
-}
-.rounded-l-lg{
-  border-top-left-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-}
 .rounded-r-lg{
   border-top-right-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
 }
-.rounded-b-lg{
-  border-bottom-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
+.rounded-t-xl{
+  border-top-left-radius: 0.75rem;
+  border-top-right-radius: 0.75rem;
 }
 .rounded-b-2xl{
   border-bottom-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
+}
+.rounded-bl-lg{
+  border-bottom-left-radius: 0.5rem;
+}
+.rounded-tr-lg{
+  border-top-right-radius: 0.5rem;
 }
 .border{
   border-width: 1px;
@@ -3142,10 +3131,6 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
 }
-.bg-gray-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
 .bg-primary-600{
   --tw-bg-opacity: 1;
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
@@ -3174,9 +3159,16 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(255 251 235 / var(--tw-bg-opacity));
 }
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
+.bg-transparent{
+  background-color: transparent;
 }
 .bg-primary-50{
   --tw-bg-opacity: 1;
@@ -3189,9 +3181,6 @@ select{
 .bg-primary-500{
   --tw-bg-opacity: 1;
   background-color: rgb(14 165 233 / var(--tw-bg-opacity));
-}
-.bg-transparent{
-  background-color: transparent;
 }
 .bg-primary-500\/10{
   background-color: rgb(14 165 233 / 0.1);
@@ -3277,17 +3266,25 @@ select{
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.px-0{
+  padding-left: 0px;
+  padding-right: 0px;
 }
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.py-0\.5{
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+.py-0{
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 .px-5{
   padding-left: 1.25rem;
@@ -3300,6 +3297,10 @@ select{
 .px-1\.5{
   padding-left: 0.375rem;
   padding-right: 0.375rem;
+}
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .py-6{
   padding-top: 1.5rem;
@@ -3343,12 +3344,6 @@ select{
 }
 .pr-8{
   padding-right: 2rem;
-}
-.pb-2{
-  padding-bottom: 0.5rem;
-}
-.pb-4{
-  padding-bottom: 1rem;
 }
 .text-left{
   text-align: left;
@@ -3598,20 +3593,20 @@ select{
   --tw-placeholder-opacity: 1;
   color: rgb(100 116 139 / var(--tw-placeholder-opacity));
 }
-.opacity-50{
-  opacity: 0.5;
+.opacity-25{
+  opacity: 0.25;
 }
 .opacity-75{
   opacity: 0.75;
+}
+.opacity-50{
+  opacity: 0.5;
 }
 .opacity-100{
   opacity: 1;
 }
 .opacity-0{
   opacity: 0;
-}
-.opacity-25{
-  opacity: 0.25;
 }
 .shadow{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
@@ -3767,12 +3762,12 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(245 158 11 / var(--tw-bg-opacity));
 }
+.hover\:bg-gray-500\/5:hover{
+  background-color: rgb(100 116 139 / 0.05);
+}
 .hover\:bg-primary-600:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(2 132 199 / var(--tw-bg-opacity));
-}
-.hover\:bg-gray-500\/5:hover{
-  background-color: rgb(100 116 139 / 0.05);
 }
 .hover\:bg-gray-100:hover{
   --tw-bg-opacity: 1;
@@ -3793,10 +3788,6 @@ select{
 .hover\:text-primary-500:hover{
   --tw-text-opacity: 1;
   color: rgb(14 165 233 / var(--tw-text-opacity));
-}
-.hover\:text-white:hover{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .hover\:text-danger-700:hover{
   --tw-text-opacity: 1;
@@ -3821,6 +3812,10 @@ select{
 .hover\:text-gray-800:hover{
   --tw-text-opacity: 1;
   color: rgb(30 41 59 / var(--tw-text-opacity));
+}
+.hover\:text-white:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .hover\:text-gray-700:hover{
   --tw-text-opacity: 1;
@@ -3861,6 +3856,10 @@ select{
   --tw-bg-opacity: 1;
   background-color: rgb(180 83 9 / var(--tw-bg-opacity));
 }
+.focus\:bg-gray-50:focus{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 250 252 / var(--tw-bg-opacity));
+}
 .focus\:bg-primary-500\/10:focus{
   background-color: rgb(14 165 233 / 0.1);
 }
@@ -3890,6 +3889,10 @@ select{
 .focus\:text-danger-600:focus{
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+.focus\:text-primary-500:focus{
+  --tw-text-opacity: 1;
+  color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 .focus\:text-white:focus{
   --tw-text-opacity: 1;
@@ -3995,11 +3998,6 @@ select{
   --tw-text-opacity: 1;
   color: rgb(14 165 233 / var(--tw-text-opacity));
 }
-.group:focus-within .group-focus-within\:ring-1{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
 .group:focus-within .group-focus-within\:ring-2{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -4052,22 +4050,23 @@ select{
   --tw-text-opacity: 1;
   color: rgb(254 243 199 / var(--tw-text-opacity));
 }
-.group:focus .group-focus\:ring-1{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+[dir="rtl"] .rtl\:right-auto{
+  right: auto;
 }
 [dir="rtl"] .rtl\:left-0{
   left: 0px;
 }
-[dir="rtl"] .rtl\:right-auto{
-  right: auto;
+[dir="rtl"] .rtl\:left-auto{
+  left: auto;
 }
 [dir="rtl"] .rtl\:right-0{
   right: 0px;
 }
 [dir="rtl"] .rtl\:ml-1{
   margin-left: 0.25rem;
+}
+[dir="rtl"] .rtl\:-mr-2{
+  margin-right: -0.5rem;
 }
 [dir="rtl"] .rtl\:ml-2{
   margin-left: 0.5rem;
@@ -4099,11 +4098,13 @@ select{
 [dir="rtl"] .rtl\:-ml-1{
   margin-left: -0.25rem;
 }
-[dir="rtl"] .rtl\:mr-3{
-  margin-right: 0.75rem;
+[dir="rtl"] .rtl\:-translate-x-5{
+  --tw-translate-x: -1.25rem;
+  transform: var(--tw-transform);
 }
-[dir="rtl"] .rtl\:-mr-2{
-  margin-right: -0.5rem;
+[dir="rtl"] .rtl\:translate-x-full{
+  --tw-translate-x: 100%;
+  transform: var(--tw-transform);
 }
 [dir="rtl"] .rtl\:rotate-180{
   --tw-rotate: 180deg;
@@ -4114,6 +4115,9 @@ select{
 }
 [dir="rtl"] .rtl\:pl-2{
   padding-left: 0.5rem;
+}
+[dir="rtl"] .rtl\:pr-0{
+  padding-right: 0px;
 }
 [dir="rtl"] .rtl\:pr-12{
   padding-right: 3rem;
@@ -4643,10 +4647,6 @@ select{
     padding-right: 2rem;
   }
 
-  .lg\:pl-60{
-    padding-left: 15rem;
-  }
-
   .lg\:pl-80{
     padding-left: 20rem;
   }
@@ -4656,12 +4656,13 @@ select{
     line-height: 1.75rem;
   }
 
-  [dir="rtl"] .rtl\:lg\:pl-0{
-    padding-left: 0px;
+  [dir="rtl"] .rtl\:lg\:-translate-x-0{
+    --tw-translate-x: -0px;
+    transform: var(--tw-transform);
   }
 
-  [dir="rtl"] .rtl\:lg\:pr-60{
-    padding-right: 15rem;
+  [dir="rtl"] .rtl\:lg\:pl-0{
+    padding-left: 0px;
   }
 
   [dir="rtl"] .rtl\:lg\:pr-80{
